Fix SonarQube issues: method references, constants, private constructors, java.time API, try-with-resources, logger